# data_structure_practice

./: CMakeLists.txt
w1/: w1p1.cpp  w1p2.cpp
w10/: w10p2.cpp  w10p3.cpp  w10plus1.cpp
w11/: w11p1.cpp  w11p2.cpp  w11p3.cpp  w11pkus1.cpp
w12/: w12p1.cpp  w12p2.cpp  w12p3.cpp  w12plus1.cpp
w13/: w13p1.cpp  w13p2.cpp  w13p3.cpp  w13plus1.cpp
w14/: w14p1.cpp  w14p2.cpp  w14p3.cpp  w14plus1.cpp
w15/: w15p1.cpp  w15p2.cpp  w15p3.cpp  w15plus1.cpp
w16/: w16plus1.cpp
w17/: 17plus1.cpp  w17p1.cpp  w17p2.cpp  w17p3.cpp
w2/: w2p1.cpp  w2p2.cpp  w2p3.cpp  w2plus1.cpp  w2plus2.cpp
w3/: w3p1.cpp  w3p2.cpp
w4/: w4p1.cpp  w4p2.cpp
w5/: w5p1.cpp  w5p2.cpp  w5p3.cpp  w5p4.cpp  w5p5.cpp
w6/: w6p1.cpp  w6p2.cpp  w6p3.cpp  w6plus1.cpp  w6plus2.cpp
w7/: w7p1.cpp  w7p2.cpp  w7p3.cpp  w7plus1.cpp  w7plus2.cpp
w8/: w8p1.cpp  w8p2.cpp  w8p3.cpp  w8plus1.cpp  w8plus2.cpp
w9/: w9p1.cpp
