cmake_minimum_required(VERSION 3.17)
project(w3)

set(CMAKE_CXX_STANDARD 14)

add_executable(w1p1 w1/w1p1.cpp)
add_executable(w1p2 w1/w1p2.cpp)
add_executable(w2p1 w2/w2p1.cpp)
add_executable(w2p2 w2/w2p2.cpp)
add_executable(w2plus1 w2/w2plus1.cpp)
add_executable(w2p3 w2/w2p3.cpp)
add_executable(w2plus2 w2/w2plus2.cpp)
add_executable(w3p1 w3/w3p1.cpp)
add_executable(w3p2 w3/w3p2.cpp)