cmake_minimum_required(VERSION 3.17)
project(w3)

set(CMAKE_CXX_STANDARD 14)

add_executable(w1p1 w1/w1p1.cpp)
add_executable(w1p2 w1/w1p2.cpp)
add_executable(w2p1 w2/w2p1.cpp)
add_executable(w2p2 w2/w2p2.cpp)
add_executable(w2plus1 w2/w2plus1.cpp)
add_executable(w2p3 w2/w2p3.cpp)
add_executable(w2plus2 w2/w2plus2.cpp)
add_executable(w3p1 w3/w3p1.cpp w3/123.cpp)
add_executable(w3p2 w3/w3p2.cpp)

add_executable(123 w3/123.cpp)
add_executable(w5p1 w5/w5p1.cpp)
add_executable(w5p2 w5/w5p2.cpp)
add_executable(w5p3 w5/w5p3.cpp)
add_executable(w5p5 w5/w5p5.cpp)
add_executable(w5p4 w5/w5p4.cpp)
add_executable(w4p1 w4/w4p1.cpp)
add_executable(w6p1 w6/w6p1.cpp)
add_executable(w6p2 w6/w6p2.cpp)
add_executable(w6p3 w6/w6p3.cpp)
add_executable(w7p1 w7/w7p1.cpp)
add_executable(w7p2 w7/w7p2.cpp)
add_executable(w7p3 w7/w7p3.cpp)