cmake_minimum_required(VERSION 3.17)
project(data_structure)

set(CMAKE_CXX_STANDARD 14)

add_executable(w12p3 w12/w12p3.cpp)
add_executable(w8plus2 w8/w8plus2.cpp)
add_executable(12 12.cpp)
add_executable(w13p1 w13/w13p1.cpp)
add_executable(w13p2 w13/w13p2.cpp)
add_executable(w13p3 w13/w13p3.cpp)
add_executable(w10plus1 w10/w10plus1.cpp)
add_executable(w14p1 w14/w14p1.cpp)
add_executable(w14p2 w14/w14p2.cpp)
add_executable(w14p3 w14/w14p3.cpp)
add_executable(w15p1 w15/w15p1.cpp)
add_executable(w15p2 w15/w15p2.cpp)
add_executable(w11pkus1 w11/w11pkus1.cpp)
add_executable(w15p3 w15/w15p3.cpp)